--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
   --secondary-text-color: #555; */
 
   --primary-color: #e7e7e7;
-  --primary-text-color: #222;
+  --primary-text-color: #333;
   --secondary-color: #007bff;
   --secondary-text-color: #555;
 
@@ -180,6 +180,7 @@ main .bilan ._card-count {
   align-items: flex-start;
   font-weight: bold;
   background-color: #fff;
+  color: #000;
 }
 
 main .bilan ._card-title {
