--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -80,6 +80,55 @@
   padding: 0.2rem 0.5rem;
 }
 
+._form-group {
+  padding: 8px 0;
+  margin: 0 4px;
+}
+
+._row {
+  display: flex;
+}
+
+._form-group label {
+  display: block;
+  margin-top: 0.4rem;
+  margin-bottom: 4px;
+  color: var(--color-red);
+}
+
+._form-group input,
+._form-group textarea {
+  width: 100%;
+  height: 30px;
+  padding: 4px 1rem;
+  font-size: 1.2rem;
+  border-radius: 4px;
+  border: none;
+  background-color: var(--color-light-gray);
+  outline: none;
+}
+
+._form-group input:focus,
+._form-group textarea:focus {
+  border: 1px solid var(--color-red-hover);
+}
+
+._form-group textarea {
+  height: 100px;
+  overflow: auto;
+}
+
+._form-group textarea::placeholder {
+  font-size: 1rem;
+}
+
+form {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  margin: 2rem;
+}
+
 body {
   background-color: var(--bg-color);
   color: var(--primary-text-color);
@@ -216,6 +265,7 @@ main {
   margin: 0 auto;
   overflow: hidden;
   padding: 0 var(--default-spacing);
+  min-height: calc(100vh - 50px);
 }
 
 main .bilan-title {
@@ -380,6 +430,20 @@ footer.footer {
   max-width: var(--max-content-width);
   margin: 0 auto;
   padding: 0 var(--default-spacing);
+}
+
+#add {
+  position: relative;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+#add div:last-child ._form-group button {
+  float: right;
 }
 
 @media only screen and (max-width: 900px) {
