--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -144,7 +144,7 @@
   /* margin: 1rem 0; */
 
   /* padding: 0.5rem; */
-  border-top: 1px solid white;
+  /* border-top: 1px solid white; */
   border-bottom: 1px solid white;
 }
 
@@ -476,6 +476,9 @@ footer.footer {
   float: right;
 }
 
+#notifications {
+  margin-top: 2rem;
+}
 .notification-card {
   padding: 0.5rem 1rem;
   cursor: pointer;
