--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,6 +148,19 @@
   border-bottom: 1px solid white;
 }
 
+._field-group {
+  margin: 1rem 0;
+}
+
+._field-group-label {
+  font-weight: bold;
+  /* color: var(--color-red); */
+}
+
+._field-group-value {
+  color: #555;
+}
+
 form {
   position: relative;
   width: 100%;
@@ -502,6 +515,13 @@ footer.footer {
   position: relative;
   top: -1rem;
   float: right;
+}
+
+#_details {
+  position: relative;
+  padding-top: 2rem;
+  max-width: 700px;
+  margin: auto;
 }
 
 @media only screen and (max-width: 900px) {
